#502 UI - Main - Main Scrollbar (avoid ScrollArea as the height was buggy)

--- a/repertoire.ui/src/index.css
+++ b/repertoire.ui/src/index.css
@@ -13,7 +13,6 @@ body,
 }
 
 .app {
-  overflow: auto;
   display: flex;
   position: relative;
 }
